<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button_math_mod">%</string>
    <string name="button_math_SQRT">sqrt</string>
    <string name="button_math_pow2">x^2</string>
    <string name="button_math_divideX">1/x</string>
    <string name="button_action_CE">CE</string>
    <string name="button_action_C">C</string>
    <string name="button_action_BACK">back</string>
    <string name="button_math_divide">/</string>
    <string name="button_math_multiply">x</string>
    <string name="button_math_minus">-</string>
    <string name="button_math_plus">+</string>
    <string name="button_numpad_7">7</string>
    <string name="button_numpad_4">4</string>
    <string name="button_numpad_1">1</string>
    <string name="button_numpad_8">8</string>
    <string name="button_numpad_5">5</string>
    <string name="button_numpad_2">2</string>
    <string name="button_numpad_9">9</string>
    <string name="button_numpad_6">6</string>
    <string name="button_numpad_3">3</string>
    <string name="button_math_DaoDau">-+</string>
    <string name="button_numpad_0">0</string>
    <string name="button_numpad_Dot">.</string>
    <string name="button_action_equal">=</string>
</resources>
