<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.BasicCalculator_Activity"
    tools:showIn="@layout/basicCalculator_main"
    ><LinearLayout
        android:id="@+id/layout_output"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_numpad"
        android:weightSum="100"
        android:background="@drawable/linearlayoutboder">
        <com.example.applycation.calculator.autoResizeText.AutoResizeTextView
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="150sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="5 x 5 = 25"
            android:id="@+id/text_SmallResult"
            android:textColor="#000000"
            android:layout_weight="75" />
        <com.example.applycation.calculator.autoResizeText.AutoResizeTextView
            android:gravity="right"
            android:textSize="300sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="25"
            android:textStyle="bold"
            android:id="@+id/text_Result"
            android:textColor="#000000"
            android:background="#a1a0a0"
            android:layout_weight="25" />
    </LinearLayout>
    <TableLayout
        android:id="@+id/layout_numpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="240"
        >
        <TableRow>
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_mod"
                android:id="@+id/button_Math_mod"
                android:background="@drawable/boder"
                android:textAllCaps="false"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_SQRT"
                android:id="@+id/button_Math_sqrt"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />

            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_pow2"
                android:textAllCaps="false"
                android:id="@+id/button_Math_xmu2"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_math_divideX"
                android:id="@+id/button_Math_1phanX"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_action_CE"
                android:id="@+id/button_action_CE"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_action_C"
                android:id="@+id/button_action_C"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_action_BACK"
                android:id="@+id/button_action_back"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_math_divide"
                android:id="@+id/button_Math_divide"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_7"
                android:id="@+id/button_numpad_7"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_8"
                android:id="@+id/button_numpad_8"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_9"
                android:id="@+id/button_numpad_9"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_math_multiply"
                android:id="@+id/button_Math_multiply"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_4"
                android:id="@+id/button_numpad_4"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_5"
                android:id="@+id/button_numpad_5"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_6"
                android:id="@+id/button_numpad_6"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_math_minus"
                android:id="@+id/button_Math_minus"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_1"
                android:id="@+id/button_numpad_1"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_2"
                android:id="@+id/button_numpad_2"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_3"
                android:id="@+id/button_numpad_3"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_math_plus"
                android:id="@+id/button_Math_plus"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_math_DaoDau"
                android:id="@+id/button_Math_DaoDau"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_0"
                android:id="@+id/button_numpad_0"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_numpad_Dot"
                android:id="@+id/button_numpad_dot"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
            <Button
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/button_action_equal"
                android:id="@+id/button_action_equal"
                android:background="@drawable/boder"
                android:textSize="@dimen/buttondimen" />
        </TableRow>
    </TableLayout>
</RelativeLayout>